@@ -209,6 +209,8 @@
 
 #define wxUSE_STD_DEFAULT  0
 
+#define wxUSE_STD_CONTAINERS_COMPATIBLY wxUSE_STD_DEFAULT
+
 #define wxUSE_STD_CONTAINERS 0
 
 #define wxUSE_STD_IOSTREAM  wxUSE_STD_DEFAULT
